# vehicle-server/apis/oneof/openapi.yaml
@@ -33,9 +33,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Vehicle"
+                $ref: "#/components/schemas/VehicleResponse"
 
 components:
   schemas:
@@ -51,6 +49,18 @@ components:
     #---------------------------------------------------------------------------
     # Model objects
     #---------------------------------------------------------------------------
+    VehicleResponse:
+      type: object
+      required:
+        - vehicles
+        - paginationInfo
+      properties:
+        vehicles:
+          type: array
+          items:
+            $ref: "#/components/schemas/Vehicle"
+        paginationInfo:
+          $ref: "#/components/schemas/PaginationInfo"
     Vehicle:
       type: object
       required:
@@ -62,7 +72,25 @@ components:
           type: string
         data:
           $ref: "#/components/schemas/VehicleData"
-
+    PaginationInfo:
+      type: object
+      required:
+        - page
+        - size
+        - totalElements
+        - totalPages
+      properties:
+        page:
+          type: integer
+        size:
+          type: integer
+        numberOfElements:
+          type: integer
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
     #---------------------------------------------------------------------------
     # Interface class with discriminator 'vehicleType'
     #---------------------------------------------------------------------------
