# vehicle-server/src/main/java/ch/cristiano/vehicle/server/rest/oneof/OneOfController.java
@@ -10,49 +10,124 @@ import javax.validation.constraints.Min;
 import org.openapitools.oneof.api.VehiclesApi;
 import org.openapitools.oneof.model.CarData;
 import org.openapitools.oneof.model.CicleData;
+import org.openapitools.oneof.model.PaginationInfo;
 import org.openapitools.oneof.model.TruckData;
 import org.openapitools.oneof.model.Vehicle;
-import org.openapitools.oneof.model.VehicleColor;
-import org.openapitools.oneof.model.VehicleType;
+import org.openapitools.oneof.model.VehicleResponse;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+
+import ch.cristiano.vehicle.server.persistence.CarEntity;
+import ch.cristiano.vehicle.server.persistence.CarRepository;
+import ch.cristiano.vehicle.server.persistence.CicleEntity;
+import ch.cristiano.vehicle.server.persistence.TruckEntity;
+import ch.cristiano.vehicle.server.persistence.VehicleEntity;
+import ch.cristiano.vehicle.server.persistence.VehicleRepository;
 
 @RestController
 public class OneOfController implements VehiclesApi {
 
-    @Override
-    public ResponseEntity<List<Vehicle>> queryVehicles(@Valid Integer page, @Min(1) @Max(100) @Valid Integer size) {
-        List<Vehicle> vehicles = this.geDummytVehicles();
-        return ResponseEntity.ok(vehicles);
+    private final VehicleRepository vehicleRepository;
+    private final CarRepository carRepository;
+
+    public OneOfController(VehicleRepository repository, CarRepository carRepository) {
+        this.vehicleRepository = repository;
+        this.carRepository = carRepository;
     }
 
-    private List<Vehicle> geDummytVehicles() {
+    @Override
+    public ResponseEntity<VehicleResponse> queryVehicles(@Valid Integer page, @Min(1) @Max(100) @Valid Integer size) {
+        VehicleResponse vehicleResponse = new VehicleResponse();
+        PageRequest pageRequest = PageRequest.of(page, size);
+        Page<VehicleEntity> entities = vehicleRepository.findAll(pageRequest);
+        List<Vehicle> vehicles = this.getVehicles(entities.getContent());
+        vehicleResponse.setVehicles(vehicles);
+        vehicleResponse.setPaginationInfo(this.getPaginationInfo(entities));
+        return ResponseEntity.ok(vehicleResponse);
+    }
+
+    @RequestMapping("/vehicles/pagination")
+    @GetMapping
+    public Page<VehicleEntity> query(
+            @RequestParam(required = false, defaultValue = "0") int page,
+            @RequestParam(required = false, defaultValue = "20") int size) {
+        PageRequest pageRequest = PageRequest.of(page, size);
+        Page<VehicleEntity> vehicleEntities = vehicleRepository.findAll(pageRequest);
+        return vehicleEntities;
+    }
+
+    @RequestMapping("/cars")
+    @GetMapping
+    public Page<CarEntity> queryCars(
+            @RequestParam(required = false, defaultValue = "0") int page,
+            @RequestParam(required = false, defaultValue = "20") int size) {
+        PageRequest pageRequest = PageRequest.of(page, size, Sort.by("color"));
+        return carRepository.findAll(pageRequest);
+    }
+
+    private List<Vehicle> getVehicles(List<VehicleEntity> entities) {
         List<Vehicle> vehicles = new ArrayList<>();
+        for (VehicleEntity vehicleEntity : entities) {
+            switch (vehicleEntity.getVehicleType()) {
+                case "CAR":
+                    CarEntity carEntity = (CarEntity) vehicleEntity;
+                    vehicles.add(this.mapToCar(carEntity));
+                    break;
+                case "TRUCK":
+                    TruckEntity truckEntity = (TruckEntity) vehicleEntity;
+                    vehicles.add(this.mapToTruck(truckEntity));
+                    break;
+                case "CICLE":
+                    CicleEntity cicleEntity = (CicleEntity) vehicleEntity;
+                    vehicles.add(this.mapToCicle(cicleEntity));
+                    break;
+            }
+        }
+        return vehicles;
+    }
 
-        Vehicle car = new Vehicle(VehicleType.CAR.name());
-        car.setColor(VehicleColor.RED.name());
-        CarData carData = new CarData(VehicleType.CAR.name());
-        carData.setCarAttributes("car attributes");
+    private Vehicle mapToCar(CarEntity carEntity) {
+        Vehicle car = new Vehicle(carEntity.getVehicleType());
+        car.setColor(carEntity.getColor());
+        CarData carData = new CarData(carEntity.getVehicleType());
+        carData.setCarAttributes(carEntity.getCarAttributes());
         car.setData(carData);
+        return car;
+    }
 
-        Vehicle truck = new Vehicle(VehicleType.TRUCK.name());
-        truck.setColor(VehicleColor.GREEN.name());
-        TruckData truckData = new TruckData(VehicleType.TRUCK.name());
-        truckData.setTruckAttributes("truck attributes");
-        truckData.setTruckCountWheels(8);
+    private Vehicle mapToTruck(TruckEntity truckEntity) {
+        Vehicle truck = new Vehicle(truckEntity.getVehicleType());
+        truck.setColor(truckEntity.getColor());
+        TruckData truckData = new TruckData(truckEntity.getVehicleType());
+        truckData.setTruckAttributes(truckEntity.getTruckAttributes());
+        truckData.setTruckCountWheels(truckEntity.getCountWheels());
         truck.setData(truckData);
+        return truck;
+    }
 
-        Vehicle cicle = new Vehicle(VehicleType.CICLE.name());
-        cicle.setColor(VehicleColor.BLUE.name());
-        CicleData cicleData = new CicleData(VehicleType.CICLE.name());
-        cicleData.setCicleAttributes("cicle attributes");
+    private Vehicle mapToCicle(CicleEntity cicleEntity) {
+        Vehicle cicle = new Vehicle(cicleEntity.getVehicleType());
+        cicle.setColor(cicleEntity.getColor());
+        CicleData cicleData = new CicleData(cicleEntity.getVehicleType());
+        cicleData.setCicleAttributes(cicleEntity.getCicleAttributes());
         cicleData.setCicleCountWheels(2);
         cicle.setData(cicleData);
+        return cicle;
+    }
 
-        vehicles.add(car);
-        vehicles.add(truck);
-        // vehicles.add(cicle);
-
-        return vehicles;
+    private PaginationInfo getPaginationInfo(Page<VehicleEntity> page) {
+        PaginationInfo paginationInfo = new PaginationInfo();
+        paginationInfo.setPage(page.getNumber());
+        paginationInfo.setSize(page.getSize());
+        paginationInfo.setNumberOfElements(page.getNumberOfElements());
+        paginationInfo.setTotalElements(page.getTotalElements());
+        paginationInfo.setTotalPages(page.getTotalPages());
+        return paginationInfo;
     }
 }
